# smort

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.py  pyproject.toml
include/: common.hpp  error.hpp  image.hpp  keyboard.hpp  smort_meme.hpp  vector.hpp  window.hpp
smort/: __init__.py  __init__.pyi  keyboard.pyi
src/: bindings.cpp  common.cpp  error.cpp  image.cpp  vector.cpp  window.cpp
